# garmin-connect-discordbot

./: .env.example  .gitignore  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  sync_to_remote.sh
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  ci.yml  cicd.yml  lint-and-test.yml  update-requirements.yml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  docker.dev.sh  docker.prod.sh  docker_run.sh  docker_setup.sh  entrypoint.sh
src/: config.py  consts.py  dependencies.py  garmin_service.py  logging_helper.py  registry.py  registry_setup.py  setup.py  utils.py
src/application/: garmin_service.py  scheduler_service.py
src/domain/: common.py  metrics.py  models.py
src/infra/: discord_api_adapter.py  discord_api_client.py  garmin_api_client.py  time_provider.py
src/infra/discord/: discord_api_adapter.py  discord_api_client.py
src/infra/garmin/: endpoints.py  garmin_api_adapter.py  garmin_api_client.py  garmin_endpoints.py
src/infra/garmin/dtos/: __init__.py  garmin_bb_response.py  garmin_hrv_response.py  garmin_response.py  garmin_rhr_response.py  garmin_sleep_response.py  garmin_sleep_score_response.py  garmin_steps_response.py  garmin_stress_response.py
src/infra/garmin_dtos/: garmin_hrv_response.py  garmin_sleep_response.py  garmin_sleep_score_response.py
src/infra/plotting/: metrics_gridplot.py  metrics_plot.py  plotting_service.py  sleep_analysis_plot.py  sleep_plot.py  stress_plot.py
src/presentation/: discord_messages.py  discord_service.py  event_handlers.py  login_prompt.py  message_builder.py  metric_line_builder.py  metric_msg_builder.py  notification_service.py  summary_ready_handler.py  view_models.py
src/setup/: config.py  dependencies.py  factories.py  garmin_metrid_ids.py  init_factories.py  logging_helper.py  message_formats.py  registry.py  registry_setup.py
tests/: test_endpoints.py
tests/dev/: json_dump_endpoint.py  plot_tests.py  test_utils.py
tests/dev/testing/: endpoint_tests.py  plot_tests.py
tests/dev/utils/: json_dump_endpoint.py  test_utils.py
tests/integration/: endpoint_tests.py  test_endpoints.py
