[tool.poetry]
name = "garmin-connect-discordbot"
version = "0.1.0"
description = ""
authors = ["holstt"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
discord-webhook = "^1.1.0"
python-dotenv = "^1.0.0"
garminconnect = "^0.2.9"
python-dateutil = "^2.8.2"
apscheduler = "^3.10.1"
hypothesis = "^6.72.1"
pydantic = "^2.4.2"
matplotlib = "^3.8.0"
table2ascii = "^1.1.2"
pydantic-settings = "^2.0.3"
typeguard = "^4.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
black = "^23.3.0"
pyright = "^1.1.329"
pytest = "^7.4.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Avoids conflict
[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"


# In strict, but don't show these errors
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportUnusedFunction = "none"
reportUnknownMemberType = "none"


# Not in strict, but show these errors
reportMissingSuperCall = "error" # Avoids risking parent class missing initialization values
reportCallInDefaultInitializer = "error"
reportImplicitOverride = "information"
reportImplicitStringConcatenation = "error"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "information"
